--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,8 @@ jobs:
           node-version: '20'
       - run: npm ci
       - run: npx playwright install --with-deps
-      - run: npm run test
+      - run: npm run test:unit
+      - run: npm run test:e2e
       - uses: actions/upload-artifact@v4
         if: failure()
         with:
