--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,7 @@ jobs:
       - run: npx playwright install --with-deps
       - run: npm run test:unit
       - run: npm run test:e2e
+      - run: npm run test:accessibility
       - uses: actions/upload-artifact@v4
         if: failure()
         with:
