--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,7 @@ jobs:
       - run: npm run test:unit
       - run: npm run test:e2e
       - run: npm run test:accessibility
+      - run: npm run test:mobile
       - uses: actions/upload-artifact@v4
         if: failure()
         with:
