feat: Add mobile responsiveness tests and update package.json and GitHub Actions workflow

--- a/package.json
+++ b/package.json
@@ -62,5 +62,9 @@
   "lint-staged": {
     "*.js": "eslint --fix && prettier --write",
     "*.css": "stylelint --fix"
+  },
+  "dependencies": {
+    "@sentry/browser": "^9.41.0",
+    "@sentry/tracing": "^7.120.3"
   }
 }
